# my-erc20-snek-token

./: .coverage 2  README.md  moccasin.toml  pyproject.toml
contracts/: snek_token.vy  snek_token_copy.vy
contracts/sub_lesson/: stateful_fuzz_solvable.vy  stateless_fuzz_solvable.vy
script/: deploy.py  deploy_short_version.py
tests/: conftest.py
tests/sub_lesson/: test_stateful.py  test_stateful_sandbox.py  test_stateful_snek_token.py  test_stateless.py  test_stateless_sandbox.py
tests/unit/: test_sandbox.py  test_token.py
