[project]
name = "moccasin_project"
version = "0.1.0"
description = "Basic erc20 token"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mamushi>=0.0.4",
    "moccasin>=0.3.8",
    "ruff>=0.12.2",
    "vyper==0.4.0",
]


[tool.moccasin.project]
src = "contracts"
dependencies = ["snekmate"]
